# GeoEstateChat

./: README.md
backend/: pyproject.toml
backend/app/: __init__.py  db.py  llm_explain.py  llm_router.py  main.py  services.py
backend/app/llm/: llm_client.py  llm_explain.py  llm_prompt.py  llm_router.py
backend/app/modes/: services copy.py  services.py
frontend/: index.html
frontend/assets/css/: style.css  style1.css
frontend/assets/js/: chart.js  chart1 copy 2.js  chart1 copy 3.js  chart1 copy.js  chart1.js  chart2 copy.js  chart2.js  main copy.js  main.js  map.js  style.json  style1.json
notebooks/: neighborhood_list.csv  regions.json  tests.ipynb
